# rules_playwright

./: .bazelignore  .bazelrc  .bazelversion  .gitattributes  .gitignore  .prettierignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  run_gen.sh
.bcr/: config.yml  metadata.template.json  presubmit.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  publish.yaml  release.yml  release_prep.sh  tag.yaml  tests.yml
docs/: BUILD.bazel  extensions.md  integrity_map.md  repositories.md  rules.md
e2e/smoke/: BUILD  MODULE.bazel  WORKSPACE.bazel
examples/rules_js/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  package.json  playwright.config.js  playwright.config.ts  pnpm-lock.yaml
examples/rules_js/tests/: example.spec.ts  snapshots.spec.ts
examples/rules_js/todomvc/: bundle.js  director.js  index.css  index.html
examples/workspace/: .bazelrc  BUILD.bazel  WORKSPACE.bazel  browsers.json  package.json  playwright.config.ts  pnpm-lock.yaml  simple.e2e.ts
playwright/: BUILD.bazel  Cargo.toml  defs.bzl  extensions.bzl  repositories.bzl  select_exec.bzl  toolchain.bzl  unzip_browser.bzl
playwright/private/: BUILD.bazel  integrity_map.bzl  known_browsers.bzl  resolved_toolchain.bzl  select_exec.bzl  toolchains_repo.bzl  unzip_browser.bzl  util.bzl  versions.bzl
playwright/private/cli/: BUILD.bazel  Cargo.toml
playwright/private/cli/src/: browser_targets.rs  browsers.rs  download_paths.json  extract_zip.rs  integrity_map.rs  main.rs  platform_groups.rs
playwright/private/cli/src/templates/: aliases.rs  browsers.rs  mod.rs  root.rs
playwright/src/: main.rs
playwright/tests/: versions_test.bzl
playwright/tools/browser_workspace_gen/: BUILD.bazel  Cargo.toml
playwright/tools/browser_workspace_gen/src/: browser_rules.rs  browser_targets.rs  browsers.rs  download_paths.json  download_paths.rs  main.rs  platform_groups.rs  templates.rs
playwright/tools/browser_workspace_gen/src/templates/: aliases.rs  mod.rs  root.rs
tools/: BUILD.bazel  integrity.bzl  version.bzl
tools/config_setting/: BUILD.bazel
tools/release/: BUILD.bazel  copy_release_artifacts.sh  defs.bzl  fetch.bzl  unzip_browser.sh
tools/release/artifacts/: browser_workspace_gen-arm64-apple-darwin  browser_workspace_gen-arm64-apple-darwin.sha256  browser_workspace_gen-arm64-unknown-linux-musl  browser_workspace_gen-arm64-unknown-linux-musl.sha256  browser_workspace_gen-x86_64-apple-darwin  browser_workspace_gen-x86_64-apple-darwin.sha256  browser_workspace_gen-x86_64-unknown-linux-musl  browser_workspace_gen-x86_64-unknown-linux-musl.sha256  cli-arm64-apple-darwin  cli-arm64-unknown-linux-musl  cli-x86_64-apple-darwin  cli-x86_64-unknown-linux-musl
