load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//playwright:defs.bzl", "LINUX_DISTROS", "MACOS_VERSIONS")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "macos_version",
    # TODO: consider how to make this default configurable.
    build_setting_default = "12",
    values = MACOS_VERSIONS,
)

string_flag(
    name = "linux_distro",
    # TODO: consider how to make this default configurable.
    build_setting_default = "debian11",
    values = LINUX_DISTROS,
)
