load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//playwright:defs.bzl", "LINUX_DISTROS", "MACOS_VERSIONS")

package(default_visibility = ["//visibility:public"])

string_flag(
    name = "macos_version",
    build_setting_default = "14",
    values = MACOS_VERSIONS,
)

string_flag(
    name = "linux_distro",
    build_setting_default = "ubuntu24.04",
    values = LINUX_DISTROS,
)
