"Bazel dependencies"

module(
    name = "com_mrmeku_rules_playwright",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "aspect_bazel_lib", version = "2.11.0")

bazel_dep(name = "toolchains_musl", version = "0.1.20", dev_dependency = True)

toolchains_musl = use_extension("@toolchains_musl//:toolchains_musl.bzl", "toolchains_musl", dev_dependency = True)
toolchains_musl.config(
    extra_target_compatible_with = ["@//tools/linkers:musl"],
)

bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "16.0.0",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_x64//:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_aarch64//:sysroot",
    targets = ["linux-aarch64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_darwin_universal//:sysroot",
    targets = ["darwin-aarch64"],
)

register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

playwright = use_extension("//playwright:extensions.bzl", "playwright")
playwright.toolchain(playwright_version = "1.14.2")
use_repo(playwright, "playwright_toolchains")

register_toolchains("@playwright_toolchains//:all")

bazel_dep(
    name = "rules_rust",
    version = "0.56.0",
    dev_dependency = True,
)

rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
    dev_dependency = True,
)
rust.toolchain(
    edition = "2021",
    extra_target_triples = {
        "aarch64-apple-darwin": [
            "@platforms//cpu:arm64",
            "@platforms//os:macos",
        ],
        "aarch64-unknown-linux-musl": [
            "@platforms//cpu:arm64",
            "@platforms//os:linux",
            "@//tools/linkers:musl",
        ],
        "x86_64-apple-darwin": [
            "@platforms//cpu:x86_64",
            "@platforms//os:macos",
        ],
        "x86_64-unknown-linux-musl": [
            "@platforms//cpu:x86_64",
            "@platforms//os:linux",
            "@//tools/linkers:musl",
        ],
    },
    versions = ["1.84.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    dev_dependency = True,
)

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
    dev_dependency = True,
)
crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//playwright/tools/browser_workspace_gen:Cargo.toml",
    ],
)
use_repo(crate, "crate_index")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sysroot_darwin_universal",
    build_file_content = """
filegroup(
    name = "sysroot",
    srcs = glob(
        include = ["**"],
        exclude = ["**/*:*"],
    ),
    visibility = ["//visibility:public"],
)
""",
    dev_dependency = True,
    integrity = "sha256-mH1BpoAIxZ8RKNQ27XWskj2zBA20a2aMr7a0+7z0e/Q=",
    strip_prefix = "sdk-macos-13.3-1615cd09b3a42ae590e05e63251a0e9fbc47bab5/root",
    urls = ["https://github.com/hexops-graveyard/sdk-macos-13.3/archive/1615cd09b3a42ae590e05e63251a0e9fbc47bab5.tar.gz"],
)

# INTEL/AMD64 Sysroot. LastModified: 2024-04-26T19:15
# https://commondatastorage.googleapis.com/chrome-linux-sysroot/
http_archive(
    name = "sysroot_linux_x64",
    build_file = "//build/sysroot:BUILD.bazel",
    sha256 = "5df5be9357b425cdd70d92d4697d07e7d55d7a923f037c22dc80a78e85842d2c",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/4f611ec025be98214164d4bf9fbe8843f58533f7/debian_bullseye_amd64_sysroot.tar.xz"],
    dev_dependency = True,
)

# ARM 64 Sysroot. LastModified: 2024-04-26T18:33
# https://commondatastorage.googleapis.com/chrome-linux-sysroot/
http_archive(
    name = "sysroot_linux_aarch64",
    build_file = "//build/sysroot:BUILD.bazel",
    sha256 = "d303cf3faf7804c9dd24c9b6b167d0345d41d7fe4bfb7d34add3ab342f6a236c",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/906cc7c6bf47d4bd969a3221fc0602c6b3153caa/debian_bullseye_arm64_sysroot.tar.xz"],
    dev_dependency = True,
)
