load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "integrity_map",
    bzl_library_target = "//playwright:defs",
    symbol_names = [
        "playwright_integrity_map",
        "playwright_browser_matrix",
    ],
    renderer = "//tools:stardoc_renderer",
)

stardoc_with_diff_test(
    name = "extensions",
    bzl_library_target = "//playwright:extensions",
    renderer = "//tools:stardoc_renderer",
)

stardoc_with_diff_test(
    name = "repositories",
    bzl_library_target = "//playwright:repositories",
    renderer = "//tools:stardoc_renderer",
)

update_docs(name = "update")
