load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = [
        "//docs:__subpackages__",
    ],
    deps = [
        "//playwright/private:integrity_map",
        "//playwright/private:known_browsers",
        "//playwright/private:select_exec",
        "//playwright/private:unzip_browser",
        "//playwright/private:util",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = [
        "//docs:__subpackages__",
    ],
    deps = [
        ":repositories",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
    ],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = [
        ":__subpackages__",
        "//docs:__subpackages__",
    ],
    deps = [
        "//playwright/private:known_browsers",
        "//playwright/private:util",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)
