# Override http_archive for local testing
local_repository(
    name = "rules_playwright",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_playwright setup #
######################
load("@rules_playwright//playwright:repositories.bzl", "playwright_repository")

# Create an repository called playwright which contains all the playwright browsers
playwright_repository(
    name = "playwright",
    playwright_version = "1.49.1",
)
