bazel_dep(name = "rules_playwright", version = "0.0.0", repo_name = "mrmeku_rules_playwright")
local_path_override(
    module_name = "rules_playwright",
    path = "../..",
)

playwright = use_extension("@mrmeku_rules_playwright//playwright:extensions.bzl", "playwright")
playwright.repo(
    name = "playwright",
    browsers_json = "//:browsers.1.50.1.json",
    integrity_map = {
        "firefox-mac14-arm64": "sha256-+FLEjmC1ypnAI/DQY4uJhtx3kQPN4mX8LC0TWEt9x9Y=",
        "chromium-headless-shell-mac14-arm64": "sha256-pJnv5Nfost7BtlSlG1JPzpQHgzXlxerZHyDoV3/1NM0=",
        "webkit-mac14-arm64": "sha256-RiHUDBPVDRlnkgHXzaoeQeAxeSvMiWNOphl/GlEj5aA=",
    },
)
use_repo(playwright, "playwright")

bazel_dep(name = "aspect_rules_js", version = "2.1.2")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")
