workspace(name = "workspace_example")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "aspect_rules_js",
    sha256 = "d66f8abf914a0454a69181b7b17acaae56d7b0e2784cb26b40cb3273c4d836d1",
    strip_prefix = "rules_js-2.2.0",
    url = "https://github.com/aspect-build/rules_js/releases/download/v2.2.0/rules_js-v2.2.0.tar.gz",
)

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

load("@aspect_rules_js//js:toolchains.bzl", "DEFAULT_NODE_VERSION", "rules_js_register_toolchains")

rules_js_register_toolchains(node_version = DEFAULT_NODE_VERSION)

load("@aspect_rules_js//npm:repositories.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()

local_repository(
    name = "rules_playwright",
    path = "../..",
)

http_file(
    name = "browsers",
    url = "https://unpkg.com/playwright-core@1.51.0/browsers.json",
    integrity = "sha256-PSKzz1BVE28nZ3YZFHorJyy37uTMGwSfktZw+G9zNKk="
)

load("@rules_playwright//playwright:repositories.bzl", "define_browsers", "playwright_repository")

define_browsers(
    name = "browsers_index",
    browsers_json = "@browsers//file:downloaded",
)

load("@browsers_index//:browsers.bzl", "fetch_browsers")

fetch_browsers()

playwright_repository(
    name = "playwright",
    playwright_version = "1.51.0",
    user_workspace_name = "browsers_index",
)

###########################################################
# Example loading playwright version from package.json.   #
###########################################################

playwright_repository(
    name = "playwright_2",
    playwright_version_from = "//:package.json",
    user_workspace_name = "browsers_index",
)

###########################################################
# Example with 1.50.1 browsers, to check their integrity. #
###########################################################

http_file(
    name = "browsers_1_50_1",
    url = "https://unpkg.com/playwright-core@1.50.1/browsers.json",
    integrity = "sha256-e66TGaLdkSnHwrAZXhN8GlgXMLQf6M5X6C26Gtn0y4w="
)

define_browsers(
    name = "browsers_index_1_50_1",
    browsers_json = "@browsers_1_50_1//file:downloaded",
)

load("@browsers_index_1_50_1//:browsers.bzl", fetch_old_browsers = "fetch_browsers")

fetch_old_browsers()

playwright_repository(
    name = "playwright_1_50_1",
    playwright_version = "1.50.1",
    user_workspace_name = "browsers_index_1_50_1",
)
