workspace(name = "workspace_example")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "aspect_rules_js",
    sha256 = "d66f8abf914a0454a69181b7b17acaae56d7b0e2784cb26b40cb3273c4d836d1",
    strip_prefix = "rules_js-2.2.0",
    url = "https://github.com/aspect-build/rules_js/releases/download/v2.2.0/rules_js-v2.2.0.tar.gz",
)

load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

rules_js_dependencies()

load("@aspect_rules_js//js:toolchains.bzl", "DEFAULT_NODE_VERSION", "rules_js_register_toolchains")

rules_js_register_toolchains(node_version = DEFAULT_NODE_VERSION)

load("@aspect_rules_js//npm:repositories.bzl", "npm_translate_lock")

npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)

load("@npm//:repositories.bzl", "npm_repositories")

npm_repositories()

local_repository(
    name = "rules_playwright",
    path = "../..",
)

http_archive(
    name = "playwright-core-1.51.0",
    build_file_content = """
exports_files([
    "browsers.json"
])
""",
    integrity = "sha256-AjT7444dRLpDAElJJjUS+1RNkElB95H2aseuQsFn0fQ=",
    strip_prefix = "package",
    url = "https://registry.npmjs.org/playwright-core/-/playwright-core-1.51.0.tgz",
)

load("@rules_playwright//playwright:repositories.bzl", "define_browsers", "playwright_repository")

define_browsers(
    name = "browsers_index",
    browsers_json = "@playwright-core-1.51.0//:browsers.json",
)

load("@browsers_index//:browsers.bzl", "fetch_browsers")

fetch_browsers()

playwright_repository(
    name = "playwright",
    playwright_version = "1.51.0",
    user_workspace_name = "browsers_index",
)

# ###########################################################
# # Example loading playwright version from package.json.   #
# ###########################################################

playwright_repository(
    name = "playwright_2",
    playwright_version_from = "//:package.json",
    user_workspace_name = "browsers_index",
)
