load("//playwright:defs.bzl", "LINUX_DISTROS", "MACOS_VERSIONS")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//cpu:arm64",
        "@platforms//os:macos",
    ],
)

[
    config_setting(
        name = "mac{}".format(version),
        values = {
            "//:macos_version": version,
        },
    )
    for version in MACOS_VERSIONS
]

[
    config_setting(
        name = distro,
        values = {
            "//:linux_distro": distro,
        },
    )
    for distro in LINUX_DISTROS
]
