load("@crate_index//:defs.bzl", "all_crate_deps")
load("//tools/release:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "cli",
    srcs = glob([
        "src/**/*.rs",
    ]),
    compile_data = [
        "src/download_paths.json",
    ],
    deps = all_crate_deps(
        normal = True,
    ),
)
