[package]
name = "browser_workspace_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { version = "1.0.137", features = [
    "std",
], default-features = false }
askama = { version = "0.12.1", features = [], default-features = false }
serde = { version = "1.0.217", features = [
    "serde_derive",
], default-features = false }
xflags = { version = "0.3.2", features = [], default-features = false }
